export const snapshot = {};

snapshot[`string 1`] = `
{
  type: "string",
}
`;

snapshot[`string 2`] = `
{
  description: "One.",
  type: "string",
}
`;

snapshot[`string 3`] = `
{
  description: "One. Two.",
  type: "string",
}
`;
